Projeto_Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declarations compound_statement DOT
Rule 2     program -> PROGRAM ID SEMICOLON compound_statement DOT
Rule 3     declarations -> declarations declaration
Rule 4     declarations -> declaration
Rule 5     declaration -> var_declaration
Rule 6     declaration -> function_declaration
Rule 7     declaration -> procedure_declaration
Rule 8     var_declaration -> VAR var_list
Rule 9     var_list -> var_list var_spec
Rule 10    var_list -> var_spec
Rule 11    var_spec -> id_list COLON type_spec SEMICOLON
Rule 12    id_list -> id_list COMMA ID
Rule 13    id_list -> ID
Rule 14    type_spec -> INTEGER
Rule 15    type_spec -> REAL
Rule 16    type_spec -> BOOLEAN
Rule 17    type_spec -> CHAR
Rule 18    type_spec -> STRINGTYPE
Rule 19    type_spec -> array_type
Rule 20    array_type -> ARRAY LBRACKET INT DOT DOT INT RBRACKET OF type_spec
Rule 21    function_declaration -> function_header declarations compound_statement SEMICOLON
Rule 22    function_declaration -> function_header compound_statement SEMICOLON
Rule 23    function_header -> FUNCTION ID LPAREN param_list RPAREN COLON type_spec SEMICOLON
Rule 24    function_header -> FUNCTION ID COLON type_spec SEMICOLON
Rule 25    procedure_declaration -> procedure_header declarations compound_statement SEMICOLON
Rule 26    procedure_declaration -> procedure_header compound_statement SEMICOLON
Rule 27    procedure_header -> PROCEDURE ID LPAREN param_list RPAREN SEMICOLON
Rule 28    procedure_header -> PROCEDURE ID SEMICOLON
Rule 29    param_list -> param_list SEMICOLON param_spec
Rule 30    param_list -> param_spec
Rule 31    param_spec -> id_list COLON type_spec
Rule 32    compound_statement -> BEGIN statement_list END
Rule 33    statement_list -> statement_list SEMICOLON statement
Rule 34    statement_list -> statement
Rule 35    statement_list -> empty
Rule 36    statement -> assignment_statement
Rule 37    statement -> procedure_call
Rule 38    statement -> compound_statement
Rule 39    statement -> if_statement
Rule 40    statement -> while_statement
Rule 41    statement -> for_statement
Rule 42    statement -> repeat_statement
Rule 43    statement -> write_statement
Rule 44    statement -> read_statement
Rule 45    statement -> empty
Rule 46    empty -> <empty>
Rule 47    assignment_statement -> variable ASSIGN expr_bool
Rule 48    variable -> ID
Rule 49    variable -> ID LBRACKET expr_bool RBRACKET
Rule 50    procedure_call -> ID LPAREN expression_list RPAREN
Rule 51    procedure_call -> ID LPAREN RPAREN
Rule 52    procedure_call -> ID
Rule 53    if_statement -> IF expr_bool THEN statement
Rule 54    if_statement -> IF expr_bool THEN statement ELSE statement
Rule 55    while_statement -> WHILE expr_bool DO statement
Rule 56    for_statement -> FOR ID ASSIGN expr_bool TO expr_bool DO statement
Rule 57    for_statement -> FOR ID ASSIGN expr_bool DOWNTO expr_bool DO statement
Rule 58    repeat_statement -> REPEAT statement_list UNTIL expr_bool
Rule 59    write_statement -> WRITE LPAREN expression_list RPAREN
Rule 60    write_statement -> WRITELN LPAREN expression_list RPAREN
Rule 61    write_statement -> WRITELN LPAREN RPAREN
Rule 62    write_statement -> WRITELN
Rule 63    read_statement -> READ LPAREN variable_list RPAREN
Rule 64    read_statement -> READLN LPAREN variable_list RPAREN
Rule 65    variable_list -> variable_list COMMA variable
Rule 66    variable_list -> variable
Rule 67    expression_list -> expression_list COMMA expr_bool
Rule 68    expression_list -> expr_bool
Rule 69    expr_bool -> expr
Rule 70    expr_bool -> expr op_rel expr
Rule 71    op_rel -> EQUAL
Rule 72    op_rel -> NEQUAL
Rule 73    op_rel -> LT
Rule 74    op_rel -> LE
Rule 75    op_rel -> GT
Rule 76    op_rel -> GE
Rule 77    expr -> termo
Rule 78    expr -> expr op_ad termo
Rule 79    op_ad -> PLUS
Rule 80    op_ad -> MINUS
Rule 81    op_ad -> OR
Rule 82    termo -> fator
Rule 83    termo -> termo op_mul fator
Rule 84    op_mul -> TIMES
Rule 85    op_mul -> DIVIDE
Rule 86    op_mul -> DIV
Rule 87    op_mul -> MOD
Rule 88    op_mul -> AND
Rule 89    fator -> const
Rule 90    fator -> variable
Rule 91    fator -> LPAREN expr_bool RPAREN
Rule 92    fator -> func_call
Rule 93    fator -> PLUS fator
Rule 94    fator -> MINUS fator
Rule 95    fator -> NOT fator
Rule 96    const -> INT
Rule 97    const -> REALNUM
Rule 98    const -> STRING
Rule 99    const -> CHARLIT
Rule 100   const -> TRUE
Rule 101   const -> FALSE
Rule 102   func_call -> ID LPAREN expression_list RPAREN
Rule 103   func_call -> ID LPAREN RPAREN
Rule 104   func_call -> LENGTH LPAREN expr_bool RPAREN

Terminals, with rules where they appear

AND                  : 88
ARRAY                : 20
ASSIGN               : 47 56 57
BEGIN                : 32
BOOLEAN              : 16
CHAR                 : 17
CHARLIT              : 99
COLON                : 11 23 24 31
COMMA                : 12 65 67
COMMENT              : 
DIV                  : 86
DIVIDE               : 85
DO                   : 55 56 57
DOT                  : 1 2 20 20
DOWNTO               : 57
ELSE                 : 54
END                  : 32
EQUAL                : 71
FALSE                : 101
FOR                  : 56 57
FUNCTION             : 23 24
GE                   : 76
GT                   : 75
ID                   : 1 2 12 13 23 24 27 28 48 49 50 51 52 56 57 102 103
IF                   : 53 54
INT                  : 20 20 96
INTEGER              : 14
LBRACKET             : 20 49
LE                   : 74
LENGTH               : 104
LPAREN               : 23 27 50 51 59 60 61 63 64 91 102 103 104
LT                   : 73
MINUS                : 80 94
MOD                  : 87
NEQUAL               : 72
NOT                  : 95
OF                   : 20
OR                   : 81
PLUS                 : 79 93
PROCEDURE            : 27 28
PROGRAM              : 1 2
RBRACKET             : 20 49
READ                 : 63
READLN               : 64
REAL                 : 15
REALNUM              : 97
REPEAT               : 58
RPAREN               : 23 27 50 51 59 60 61 63 64 91 102 103 104
SEMICOLON            : 1 2 11 21 22 23 24 25 26 27 28 29 33
STRING               : 98
STRINGTYPE           : 18
THEN                 : 53 54
TIMES                : 84
TO                   : 56
TRUE                 : 100
UNTIL                : 58
VAR                  : 8
WHILE                : 55
WRITE                : 59
WRITELN              : 60 61 62
error                : 

Nonterminals, with rules where they appear

array_type           : 19
assignment_statement : 36
compound_statement   : 1 2 21 22 25 26 38
const                : 89
declaration          : 3 4
declarations         : 1 3 21 25
empty                : 35 45
expr                 : 69 70 70 78
expr_bool            : 47 49 53 54 55 56 56 57 57 58 67 68 91 104
expression_list      : 50 59 60 67 102
fator                : 82 83 93 94 95
for_statement        : 41
func_call            : 92
function_declaration : 6
function_header      : 21 22
id_list              : 11 12 31
if_statement         : 39
op_ad                : 78
op_mul               : 83
op_rel               : 70
param_list           : 23 27 29
param_spec           : 29 30
procedure_call       : 37
procedure_declaration : 7
procedure_header     : 25 26
program              : 0
read_statement       : 44
repeat_statement     : 42
statement            : 33 34 53 54 54 55 56 57
statement_list       : 32 33 58
termo                : 77 78 83
type_spec            : 11 20 23 24 31
var_declaration      : 5
var_list             : 8 9
var_spec             : 9 10
variable             : 47 65 66 90
variable_list        : 63 64 65
while_statement      : 40
write_statement      : 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declarations compound_statement DOT
    (2) program -> . PROGRAM ID SEMICOLON compound_statement DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declarations compound_statement DOT
    (2) program -> PROGRAM . ID SEMICOLON compound_statement DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declarations compound_statement DOT
    (2) program -> PROGRAM ID . SEMICOLON compound_statement DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declarations compound_statement DOT
    (2) program -> PROGRAM ID SEMICOLON . compound_statement DOT
    (3) declarations -> . declarations declaration
    (4) declarations -> . declaration
    (32) compound_statement -> . BEGIN statement_list END
    (5) declaration -> . var_declaration
    (6) declaration -> . function_declaration
    (7) declaration -> . procedure_declaration
    (8) var_declaration -> . VAR var_list
    (21) function_declaration -> . function_header declarations compound_statement SEMICOLON
    (22) function_declaration -> . function_header compound_statement SEMICOLON
    (25) procedure_declaration -> . procedure_header declarations compound_statement SEMICOLON
    (26) procedure_declaration -> . procedure_header compound_statement SEMICOLON
    (23) function_header -> . FUNCTION ID LPAREN param_list RPAREN COLON type_spec SEMICOLON
    (24) function_header -> . FUNCTION ID COLON type_spec SEMICOLON
    (27) procedure_header -> . PROCEDURE ID LPAREN param_list RPAREN SEMICOLON
    (28) procedure_header -> . PROCEDURE ID SEMICOLON

    BEGIN           shift and go to state 8
    VAR             shift and go to state 12
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    declarations                   shift and go to state 5
    compound_statement             shift and go to state 6
    declaration                    shift and go to state 7
    var_declaration                shift and go to state 9
    function_declaration           shift and go to state 10
    procedure_declaration          shift and go to state 11
    function_header                shift and go to state 13
    procedure_header               shift and go to state 14

state 5

    (1) program -> PROGRAM ID SEMICOLON declarations . compound_statement DOT
    (3) declarations -> declarations . declaration
    (32) compound_statement -> . BEGIN statement_list END
    (5) declaration -> . var_declaration
    (6) declaration -> . function_declaration
    (7) declaration -> . procedure_declaration
    (8) var_declaration -> . VAR var_list
    (21) function_declaration -> . function_header declarations compound_statement SEMICOLON
    (22) function_declaration -> . function_header compound_statement SEMICOLON
    (25) procedure_declaration -> . procedure_header declarations compound_statement SEMICOLON
    (26) procedure_declaration -> . procedure_header compound_statement SEMICOLON
    (23) function_header -> . FUNCTION ID LPAREN param_list RPAREN COLON type_spec SEMICOLON
    (24) function_header -> . FUNCTION ID COLON type_spec SEMICOLON
    (27) procedure_header -> . PROCEDURE ID LPAREN param_list RPAREN SEMICOLON
    (28) procedure_header -> . PROCEDURE ID SEMICOLON

    BEGIN           shift and go to state 8
    VAR             shift and go to state 12
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    compound_statement             shift and go to state 17
    declaration                    shift and go to state 18
    var_declaration                shift and go to state 9
    function_declaration           shift and go to state 10
    procedure_declaration          shift and go to state 11
    function_header                shift and go to state 13
    procedure_header               shift and go to state 14

state 6

    (2) program -> PROGRAM ID SEMICOLON compound_statement . DOT

    DOT             shift and go to state 19


state 7

    (4) declarations -> declaration .

    BEGIN           reduce using rule 4 (declarations -> declaration .)
    VAR             reduce using rule 4 (declarations -> declaration .)
    FUNCTION        reduce using rule 4 (declarations -> declaration .)
    PROCEDURE       reduce using rule 4 (declarations -> declaration .)


state 8

    (32) compound_statement -> BEGIN . statement_list END
    (33) statement_list -> . statement_list SEMICOLON statement
    (34) statement_list -> . statement
    (35) statement_list -> . empty
    (36) statement -> . assignment_statement
    (37) statement -> . procedure_call
    (38) statement -> . compound_statement
    (39) statement -> . if_statement
    (40) statement -> . while_statement
    (41) statement -> . for_statement
    (42) statement -> . repeat_statement
    (43) statement -> . write_statement
    (44) statement -> . read_statement
    (45) statement -> . empty
    (46) empty -> .
    (47) assignment_statement -> . variable ASSIGN expr_bool
    (50) procedure_call -> . ID LPAREN expression_list RPAREN
    (51) procedure_call -> . ID LPAREN RPAREN
    (52) procedure_call -> . ID
    (32) compound_statement -> . BEGIN statement_list END
    (53) if_statement -> . IF expr_bool THEN statement
    (54) if_statement -> . IF expr_bool THEN statement ELSE statement
    (55) while_statement -> . WHILE expr_bool DO statement
    (56) for_statement -> . FOR ID ASSIGN expr_bool TO expr_bool DO statement
    (57) for_statement -> . FOR ID ASSIGN expr_bool DOWNTO expr_bool DO statement
    (58) repeat_statement -> . REPEAT statement_list UNTIL expr_bool
    (59) write_statement -> . WRITE LPAREN expression_list RPAREN
    (60) write_statement -> . WRITELN LPAREN expression_list RPAREN
    (61) write_statement -> . WRITELN LPAREN RPAREN
    (62) write_statement -> . WRITELN
    (63) read_statement -> . READ LPAREN variable_list RPAREN
    (64) read_statement -> . READLN LPAREN variable_list RPAREN
    (48) variable -> . ID
    (49) variable -> . ID LBRACKET expr_bool RBRACKET

    END             reduce using rule 46 (empty -> .)
    SEMICOLON       reduce using rule 46 (empty -> .)
    ID              shift and go to state 33
    BEGIN           shift and go to state 8
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    REPEAT          shift and go to state 37
    WRITE           shift and go to state 38
    WRITELN         shift and go to state 39
    READ            shift and go to state 40
    READLN          shift and go to state 41

    statement_list                 shift and go to state 20
    statement                      shift and go to state 21
    empty                          shift and go to state 22
    assignment_statement           shift and go to state 23
    procedure_call                 shift and go to state 24
    compound_statement             shift and go to state 25
    if_statement                   shift and go to state 26
    while_statement                shift and go to state 27
    for_statement                  shift and go to state 28
    repeat_statement               shift and go to state 29
    write_statement                shift and go to state 30
    read_statement                 shift and go to state 31
    variable                       shift and go to state 32

state 9

    (5) declaration -> var_declaration .

    BEGIN           reduce using rule 5 (declaration -> var_declaration .)
    VAR             reduce using rule 5 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> var_declaration .)
    PROCEDURE       reduce using rule 5 (declaration -> var_declaration .)


state 10

    (6) declaration -> function_declaration .

    BEGIN           reduce using rule 6 (declaration -> function_declaration .)
    VAR             reduce using rule 6 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 6 (declaration -> function_declaration .)
    PROCEDURE       reduce using rule 6 (declaration -> function_declaration .)


state 11

    (7) declaration -> procedure_declaration .

    BEGIN           reduce using rule 7 (declaration -> procedure_declaration .)
    VAR             reduce using rule 7 (declaration -> procedure_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> procedure_declaration .)
    PROCEDURE       reduce using rule 7 (declaration -> procedure_declaration .)


state 12

    (8) var_declaration -> VAR . var_list
    (9) var_list -> . var_list var_spec
    (10) var_list -> . var_spec
    (11) var_spec -> . id_list COLON type_spec SEMICOLON
    (12) id_list -> . id_list COMMA ID
    (13) id_list -> . ID

    ID              shift and go to state 45

    var_list                       shift and go to state 42
    var_spec                       shift and go to state 43
    id_list                        shift and go to state 44

state 13

    (21) function_declaration -> function_header . declarations compound_statement SEMICOLON
    (22) function_declaration -> function_header . compound_statement SEMICOLON
    (3) declarations -> . declarations declaration
    (4) declarations -> . declaration
    (32) compound_statement -> . BEGIN statement_list END
    (5) declaration -> . var_declaration
    (6) declaration -> . function_declaration
    (7) declaration -> . procedure_declaration
    (8) var_declaration -> . VAR var_list
    (21) function_declaration -> . function_header declarations compound_statement SEMICOLON
    (22) function_declaration -> . function_header compound_statement SEMICOLON
    (25) procedure_declaration -> . procedure_header declarations compound_statement SEMICOLON
    (26) procedure_declaration -> . procedure_header compound_statement SEMICOLON
    (23) function_header -> . FUNCTION ID LPAREN param_list RPAREN COLON type_spec SEMICOLON
    (24) function_header -> . FUNCTION ID COLON type_spec SEMICOLON
    (27) procedure_header -> . PROCEDURE ID LPAREN param_list RPAREN SEMICOLON
    (28) procedure_header -> . PROCEDURE ID SEMICOLON

    BEGIN           shift and go to state 8
    VAR             shift and go to state 12
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    function_header                shift and go to state 13
    declarations                   shift and go to state 46
    compound_statement             shift and go to state 47
    declaration                    shift and go to state 7
    var_declaration                shift and go to state 9
    function_declaration           shift and go to state 10
    procedure_declaration          shift and go to state 11
    procedure_header               shift and go to state 14

state 14

    (25) procedure_declaration -> procedure_header . declarations compound_statement SEMICOLON
    (26) procedure_declaration -> procedure_header . compound_statement SEMICOLON
    (3) declarations -> . declarations declaration
    (4) declarations -> . declaration
    (32) compound_statement -> . BEGIN statement_list END
    (5) declaration -> . var_declaration
    (6) declaration -> . function_declaration
    (7) declaration -> . procedure_declaration
    (8) var_declaration -> . VAR var_list
    (21) function_declaration -> . function_header declarations compound_statement SEMICOLON
    (22) function_declaration -> . function_header compound_statement SEMICOLON
    (25) procedure_declaration -> . procedure_header declarations compound_statement SEMICOLON
    (26) procedure_declaration -> . procedure_header compound_statement SEMICOLON
    (23) function_header -> . FUNCTION ID LPAREN param_list RPAREN COLON type_spec SEMICOLON
    (24) function_header -> . FUNCTION ID COLON type_spec SEMICOLON
    (27) procedure_header -> . PROCEDURE ID LPAREN param_list RPAREN SEMICOLON
    (28) procedure_header -> . PROCEDURE ID SEMICOLON

    BEGIN           shift and go to state 8
    VAR             shift and go to state 12
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    procedure_header               shift and go to state 14
    declarations                   shift and go to state 48
    compound_statement             shift and go to state 49
    declaration                    shift and go to state 7
    var_declaration                shift and go to state 9
    function_declaration           shift and go to state 10
    procedure_declaration          shift and go to state 11
    function_header                shift and go to state 13

state 15

    (23) function_header -> FUNCTION . ID LPAREN param_list RPAREN COLON type_spec SEMICOLON
    (24) function_header -> FUNCTION . ID COLON type_spec SEMICOLON

    ID              shift and go to state 50


state 16

    (27) procedure_header -> PROCEDURE . ID LPAREN param_list RPAREN SEMICOLON
    (28) procedure_header -> PROCEDURE . ID SEMICOLON

    ID              shift and go to state 51


state 17

    (1) program -> PROGRAM ID SEMICOLON declarations compound_statement . DOT

    DOT             shift and go to state 52


state 18

    (3) declarations -> declarations declaration .

    BEGIN           reduce using rule 3 (declarations -> declarations declaration .)
    VAR             reduce using rule 3 (declarations -> declarations declaration .)
    FUNCTION        reduce using rule 3 (declarations -> declarations declaration .)
    PROCEDURE       reduce using rule 3 (declarations -> declarations declaration .)


state 19

    (2) program -> PROGRAM ID SEMICOLON compound_statement DOT .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMICOLON compound_statement DOT .)


state 20

    (32) compound_statement -> BEGIN statement_list . END
    (33) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 53
    SEMICOLON       shift and go to state 54


state 21

    (34) statement_list -> statement .

    END             reduce using rule 34 (statement_list -> statement .)
    SEMICOLON       reduce using rule 34 (statement_list -> statement .)
    UNTIL           reduce using rule 34 (statement_list -> statement .)


state 22

    (35) statement_list -> empty .
    (45) statement -> empty .

  ! reduce/reduce conflict for END resolved using rule 35 (statement_list -> empty .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 35 (statement_list -> empty .)
  ! reduce/reduce conflict for UNTIL resolved using rule 35 (statement_list -> empty .)
    END             reduce using rule 35 (statement_list -> empty .)
    SEMICOLON       reduce using rule 35 (statement_list -> empty .)
    UNTIL           reduce using rule 35 (statement_list -> empty .)

  ! END             [ reduce using rule 45 (statement -> empty .) ]
  ! SEMICOLON       [ reduce using rule 45 (statement -> empty .) ]
  ! UNTIL           [ reduce using rule 45 (statement -> empty .) ]


state 23

    (36) statement -> assignment_statement .

    END             reduce using rule 36 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 36 (statement -> assignment_statement .)
    UNTIL           reduce using rule 36 (statement -> assignment_statement .)
    ELSE            reduce using rule 36 (statement -> assignment_statement .)


state 24

    (37) statement -> procedure_call .

    END             reduce using rule 37 (statement -> procedure_call .)
    SEMICOLON       reduce using rule 37 (statement -> procedure_call .)
    UNTIL           reduce using rule 37 (statement -> procedure_call .)
    ELSE            reduce using rule 37 (statement -> procedure_call .)


state 25

    (38) statement -> compound_statement .

    END             reduce using rule 38 (statement -> compound_statement .)
    SEMICOLON       reduce using rule 38 (statement -> compound_statement .)
    UNTIL           reduce using rule 38 (statement -> compound_statement .)
    ELSE            reduce using rule 38 (statement -> compound_statement .)


state 26

    (39) statement -> if_statement .

    END             reduce using rule 39 (statement -> if_statement .)
    SEMICOLON       reduce using rule 39 (statement -> if_statement .)
    UNTIL           reduce using rule 39 (statement -> if_statement .)
    ELSE            reduce using rule 39 (statement -> if_statement .)


state 27
